--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,16 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Bowlby+One&family=Calistoga&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <link rel="icon" type="image/png" href="/src/components/" sizes="192x192">
+
+    <title>Nightmaress</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
