--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Bowlby+One&family=Calistoga&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Alumni+Sans:ital,wght@0,100..900;1,100..900&family=Bowlby+One&family=Calistoga&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="/src/components/" sizes="192x192">
 
     <title>Nightmaress</title>
