--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,9 @@
     <link href="https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Alumni+Sans:ital,wght@0,100..900;1,100..900&family=Bowlby+One&family=Calistoga&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="/src/components/" sizes="192x192">
 
-    <title>Nightmaress</title>
+    <title>Nightmaregamess</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
