--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,28 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Alumni+Sans:ital,wght@0,100..900;1,100..900&family=Bowlby+One&family=Calistoga&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="/src/components/" sizes="192x192">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Alumni+Sans:ital,wght@0,100..900;1,100..900&family=Bowlby+One&family=Calistoga&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" type="image/png" href="/src/components/" sizes="192x192" />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-11506418249"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "AW-11506418249");
+    </script>
     <title>Nightmaregamess</title>
   </head>
   <body>
